--- a/gui/src/renderer/css/main.css
+++ b/gui/src/renderer/css/main.css
@@ -23,6 +23,7 @@ body {
     /*color: white;*/
     padding: 0.5em;
     padding-left: 2em;
+    -webkit-app-region: drag;
 }
 #top_panel .caption {
     color: #ffffff; /*Ubuntu orange*/
@@ -31,6 +32,7 @@ body {
     font: bold 0.9em Ubuntu, Verdana, sans-serif;
     padding-right: 2em;
     border-right: 1px solid #909090;
+    -webkit-app-region: no-drag;
 }
 #top_panel a {
     display: block;
@@ -41,6 +43,7 @@ body {
     font: 0.8em Ubuntu, Verdana, sans-serif;
     color: #c0c0c0;
     border-right: 1px solid #909090;
+    -webkit-app-region: no-drag;
 }
 #top_panel a:hover {
     color: white;
